--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "googleapis": "^166.0.0",
-    "next": "16.0.6",
+    "next": "^16.1.0",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
