--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "dotenv": "^17.2.3",
     "googleapis": "^166.0.0",
     "next": "^16.1.0",
     "next-auth": "^4.24.13",
-    "react": "19.2.0",
+    "react": "^19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
