--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "googleapis": "^166.0.0",
     "next": "^16.1.0",
     "next-auth": "^4.24.13",
+    "node": "^20.19.6",
     "react": "^19.2.0",
     "react-dom": "19.2.0"
   },
