--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-auth": "^4.24.13",
     "node": "^20.19.6",
     "react": "^19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
